fix bug image review
