# server/filesharing-filehandler/src/main/java/org/example/filesharing/services/AnnotationsService.java
@@ -27,4 +27,6 @@ public interface AnnotationsService {
     AnnotationsEntity getById(String annotationId);
 
     AnnotationSummaryResponse getSummary(String assetId, Integer versionNumber);
+
+    AnnotationCountsDTO getCounts(String assetId, Integer versionNumber);
 }
